--- a/Code/server/templates/index.html
+++ b/Code/server/templates/index.html
@@ -15,8 +15,7 @@
   </body>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=geometry"></script>
   <script src="https://maps.googleapis.com/maps/api/js"></script>
-  <script src="/static/where.js"></script>
-  <script src="/Code/server/static/where.js"></script>
+  <script src="../static/where.js"></script>
   <script>
       function initialize() {
           var mapOptions = {
